<resources>
    <string name="dialog_overlay_title_action_type">Action type</string>
    <string name="dialog_overlay_title_application_selection">Select an application</string>
    <string name="dialog_overlay_title_click">Click</string>
    <string name="dialog_overlay_title_condition_config">Condition</string>
    <string name="dialog_overlay_title_condition_selection">Select a condition</string>
    <string name="dialog_overlay_title_end_condition_config">End Condition</string>
    <string name="dialog_overlay_title_event_config">Event</string>
    <string name="dialog_overlay_title_event_selection">Select an event</string>
    <string name="dialog_overlay_title_intent" translatable="false">Intent</string>
    <string name="dialog_overlay_title_pause">Wait</string>
    <string name="dialog_overlay_title_scenario_config">Scenario</string>
    <string name="dialog_overlay_title_swipe">Swipe</string>
    <string name="dialog_overlay_title_toggle_event">Event state</string>
    <string name="dialog_overlay_title_intent_flags" translatable="false">Flags</string>
    <string name="dialog_overlay_title_intent_actions" translatable="false">Intent Actions</string>
    <string name="dialog_overlay_title_intent_component_name" translatable="false">Component name</string>
    <string name="dialog_overlay_title_events_toggle">Events toggles</string>
    <string name="dialog_overlay_title_change_counter">Change counter</string>
    <string name="dialog_overlay_title_counter_name_selection">Counters</string>
    <string name="dialog_overlay_title_trigger_condition_type">Trigger type</string>
    <string name="dialog_overlay_title_timer_reached">Timer reached</string>
    <string name="dialog_overlay_title_broadcast_received">Broadcast received</string>
    <string name="dialog_overlay_title_counter_reached">Counter value</string>
    <string name="dialog_overlay_title_image_event_config">Screen Event</string>
    <string name="dialog_overlay_title_trigger_event_config">Event</string>
    <string name="menu_item_title_advanced">Advanced</string>
    <string name="menu_item_title_cancel">Cancel</string>
    <string name="menu_item_title_search">Search</string>
    <string name="menu_item_title_simple">Simple</string>
    <string name="menu_item_title_events">Events</string>
    <string name="menu_item_title_config">Config</string>
    <string name="menu_item_title_more">More</string>
    <string name="menu_item_title_conditions">Conditions</string>
    <string name="menu_item_title_actions">Actions</string>
    <string name="menu_item_title_image_events">Screen</string>
    <string name="menu_item_title_trigger_events">Triggers</string>
    <string name="item_desc_click">Click somewhere on the screen</string>
    <string name="item_desc_click_details">During %1$s at [%2$d, %3$d]</string>
    <string name="item_desc_click_position_on_condition">On condition</string>
    <string name="item_desc_click_on_condition_and_operator">%1$s</string>
    <string name="item_desc_click_on_condition_and_operator_not_found">No condition selected</string>
    <string name="item_desc_click_on_condition_or_operator">Event is set to "One Condition", you can\'t select a specific one</string>
    <string name="item_desc_click_on_position">Click on %1$d, %2$d</string>
    <string name="item_desc_detection_type_exact">At [%1$d, %2$d] [%3$d, %4$d]</string>
    <string name="item_desc_detection_type_in_area">In [%1$d, %2$d] [%3$d, %4$d]</string>
    <string name="item_desc_intent">Interact with another application</string>
    <string name="item_desc_intent_action">Send %1$s</string>
    <string name="item_desc_intent_action_component">Send %1$s to %2$s</string>
    <string name="item_desc_pause">Pause the detection execution</string>
    <string name="item_desc_pause_details">During %1$s</string>
    <string name="item_desc_position_select">Select the position</string>
    <string name="item_desc_swipe">Swipe from a position on the screen to another</string>
    <string name="item_desc_swipe_details">During %1$s from [%2$d, %3$d] to [%4$d, %5$d]</string>
    <string name="item_desc_swipe_positions">Swipe from %1$d, %2$d to %3$d, %4$d</string>
    <string name="item_desc_toggle_event">Change the enabled state of an event</string>
    <string name="item_desc_toggle_event_details">Change event state with type %1$s</string>
    <string name="item_desc_toggle_event_manual">Define the events to change manually</string>
    <string name="item_desc_toggle_event_enable_all">Enable all events in this scenario</string>
    <string name="item_desc_toggle_event_invert_all">Invert the state of all events in this scenario</string>
    <string name="item_desc_toggle_event_disable_all">Disable all events in this scenario. When all events are disabled, the scenario is stopped automatically.</string>
    <string name="item_desc_event_toggles_empty">Select at least one event to change to state of</string>
    <string name="item_desc_toggle_event_state_enable_all">Enable all</string>
    <string name="item_desc_toggle_event_state_disable_all">Disable all</string>
    <string name="item_desc_toggle_event_state_invert_all">Invert all</string>
    <string name="item_desc_toggle_event_state_manual">Change %1$d events</string>
    <string name="item_desc_change_counter">Change a value to verify it later</string>
    <string name="item_desc_change_counter_details">%1$s %2$s %3$d</string>
    <string name="item_desc_on_broadcast_received">%1$s received</string>
    <string name="item_desc_on_counter_reached">%1$s %2$s %3$d</string>
    <string name="item_desc_on_timer_reached">%1$s after event is enabled</string>
    <string name="item_desc_broadcast_received">Fulfilled when a Broadcast is received</string>
    <string name="item_desc_counter_reached">Verify the value of a counter modified by an Action</string>
    <string name="item_desc_timer_reached">Fulfilled after a defined time from this event activation</string>
    <string name="item_error_action_invalid_toggle_event_target">Target event not found</string>
    <string name="item_error_action_invalid_change_counter">Counter is invalid</string>
    <string name="item_title_click">Click</string>
    <string name="item_title_click_on_condition_and_operator">Click on a condition</string>
    <string name="item_title_click_on_condition_or_operator">Click on the first detected condition</string>
    <string name="item_title_debug_generate_report">Generate a report</string>
    <string name="item_title_debug_report_available">Debug report is available</string>
    <string name="item_title_debug_report_not_available">No debug report available</string>
    <string name="item_title_debug_show_view">Show debug view</string>
    <string name="item_title_detection_type_exact">Detection at the captured position</string>
    <string name="item_title_detection_type_in_area">Detection on a part of the screen</string>
    <string name="item_title_detection_type_screen">Detection on the whole screen</string>
    <string name="item_title_intent">Intent</string>
    <string name="item_title_pause">Wait</string>
    <string name="item_title_swipe">Swipe</string>
    <string name="item_title_toggle_event">Change event state</string>
    <string name="item_title_counter_reached">On counter reached</string>
    <string name="item_title_timer_reached">On timer reached</string>
    <string name="item_title_broadcast_received">On Broadcast received</string>
    <string name="item_title_empty_event_toggles">No changes</string>
    <string name="item_title_event_toggles">%1$d changes</string>
    <string name="item_title_change_counter">Change counter</string>
    <string name="item_title_restart_when_reached">Restart when reached</string>
    <string name="item_title_toggle_type">Toggle type</string>
    <string name="item_title_toggle_change_all">Change all</string>
    <string name="message_empty_actions">No actions !</string>
    <string name="message_empty_trigger_conditions">No conditions !</string>
    <string name="message_empty_image_conditions">No screen conditions !</string>
    <string name="message_empty_end_condition_config_event_none_in_scenario">No Event created in the scenario</string>
    <string name="message_empty_end_condition_config_event_no_selection">No Event selected</string>
    <string name="message_empty_image_event_list">No screen events !</string>
    <string name="message_empty_trigger_event_list">No events !</string>
    <string name="message_empty_counter_name_list">No counter defined</string>
    <string name="message_empty_secondary_end_condition_no_events">You need at least one event to create an end condition for your scenario</string>
    <string name="message_empty_secondary_screen_event_list">A screen event contains a set of actions executed when a specific condition is detected on the screen.\nYou need at least one event or screen event in your scenario to execute it.</string>
    <string name="message_empty_secondary_trigger_event_list">An event contains a set of actions executed when a set of custom conditions are met.\nYou need at least one event or screen event in your scenario to execute it.</string>
    <string name="message_empty_secondary_trigger_condition_list">A condition is a custom criteria for starting an action.\nYou need at least one condition in your event.</string>
    <string name="message_empty_secondary_image_condition_list">An screen condition is a part of a screenshot that will be searched on each frames displayed by your phone screen.\nYou need at least one condition in your event.</string>
    <string name="message_empty_secondary_action_list">An action is an interaction (click, swipe…) with your phone triggered when the created conditions are fulfilled.\nYou need at least one action in your event.</string>
    <string name="message_empty_secondary_counter_name_list">Counters are created with a Change Counter Action or a Counter Reached Condition</string>
    <string name="message_condition_threshold">%1$d%%</string>
    <string name="message_event_copy_with_toggle_action_from_another_scenario">This event have one or more toggle event actions referencing an event from another scenario.\nYou will have to update their target events before saving your scenario.</string>
    <string name="message_event_delete_associated_end_condition">This event have one or more end conditions referencing it. Deleting this event will delete the associated end conditions as well.\nAre you sure ?</string>
    <string name="message_event_delete_associated_action">This event have one or more actions referencing it. Deleting this event will delete the associated actions as well.\nAre you sure ?</string>
    <string name="message_condition_delete_associated_action">This condition have one or more actions referencing it. Deleting this condition will delete the associated actions as well.\nAre you sure ?</string>
    <string name="message_tutorial_start">Learn how to use Smart AutoClicker</string>
    <string name="message_scenario_saving_error">Your scenario can\'t be saved due to an internal error.\nDo you want to modify it or cancel all your modifications ?</string>
    <string name="message_tutorial_first_time">Congratulations, Smart AutoClicker is now functional on your device !\nWould you like to follow a tutorial teaching you the basics of the application ?</string>
    <string name="section_title_condition_detection_details">Detection details</string>
    <string name="section_title_condition_threshold">Tolerated difference</string>
    <string name="section_title_tutorial">Tutorial</string>
    <string name="section_title_debug">Debug</string>
    <string name="input_field_label_name">Name</string>
    <string name="content_desc_image_condition">The image to be detected</string>
</resources>