<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2023 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal_default">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tutorial_card"
        style="@style/AppTheme.Widget.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:layout_marginVertical="@dimen/margin_vertical_large">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tutorial_title"
                style="@style/AppTheme.TextAppearance.CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/section_title_tutorial" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tutorial_text"
                style="@style/AppTheme.TextAppearance.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_small"
                app:layout_constraintTop_toBottomOf="@id/tutorial_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tutorial_chevron"
                android:maxLines="2"
                android:text="@string/message_tutorial_start"/>

            <ImageView
                android:id="@+id/tutorial_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tutorial_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chevron_right"
                tools:ignore="ContentDescription"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/debug_card"
        style="@style/AppTheme.Widget.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:layout_marginVertical="@dimen/margin_vertical_large">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/debug_title"
                style="@style/AppTheme.TextAppearance.CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/section_title_debug" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/debug_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/debug_title"
                app:layout_constraintBottom_toTopOf="@id/debug_report"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/item_title_debug_show_view"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/debug_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/debug_overlay"
                app:layout_constraintBottom_toTopOf="@id/separator_debug_report"
                android:text="@string/item_title_debug_generate_report"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/separator_debug_report"
                style="@style/AppTheme.Widget.DividerSecondaryH"
                android:layout_marginBottom="@dimen/margin_vertical_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/debug_report"
                app:layout_constraintBottom_toTopOf="@id/debug_report_state_text"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/debug_report_state_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical_default"
                app:layout_constraintTop_toBottomOf="@id/separator_debug_report"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/debug_report_chevron"
                android:textAppearance="@style/AppTheme.TextAppearance.ListItemSubText"
                tools:text="@string/item_desc_click_on_condition_or_operator"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/debug_report_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/debug_report_state_text"
                app:layout_constraintBottom_toBottomOf="@id/debug_report_state_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/debug_report_state_text"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chevron_right"
                tools:ignore="ContentDescription"/>

            <View
                android:id="@+id/debug_report_open_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_debug_report"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>