<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2022 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_dialog_navigation_top_bar"
        android:id="@+id/layout_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:layout_marginBottom="@dimen/margin_vertical_extra_large"
            android:orientation="vertical"
            tools:layout_gravity="center">

            <include layout="@layout/include_input_field_text"
                android:id="@+id/edit_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginBottom="@dimen/margin_horizontal_small"
                app:endIconMode="clear_text"
                android:hint="@string/input_field_label_name"/>

            <com.google.android.material.card.MaterialCardView
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginBottom="@dimen/margin_vertical_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                    android:layout_marginVertical="@dimen/margin_vertical_large"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.TextAppearance.CardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/section_title_condition_detection_details"
                        android:labelFor="@+id/edit_name"/>

                    <ImageView
                        android:id="@+id/image_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_vertical_small"
                        android:layout_marginBottom="@dimen/margin_vertical_large"
                        android:maxWidth="@dimen/dialog_condition_max_width"
                        android:maxHeight="@dimen/dialog_condition_max_height"
                        android:minWidth="50dp"
                        android:minHeight="100dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/content_desc_image_condition"
                        tools:src="@drawable/ic_click"/>

                    <include layout="@layout/include_input_field_dropdown"
                        android:id="@+id/condition_should_appear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_vertical_default"/>

                    <include layout="@layout/include_dropdown_with_selector"
                        android:id="@+id/condition_detection_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_vertical_default"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                    android:layout_marginVertical="@dimen/margin_vertical_large"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.TextAppearance.CardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/section_title_condition_threshold"/>

                    <com.google.android.material.slider.Slider
                        android:id="@+id/seekbar_diff_threshold"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_height"
                        android:layout_marginStart="@dimen/margin_horizontal_small"
                        android:layout_marginEnd="@dimen/margin_horizontal_small"
                        android:stepSize="1.0"
                        app:labelBehavior="floating"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
